--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: home
-title: Home
+permalink: /404.html
+title: Not found
 ---
-{% include cards-section.html %}
+{% include 404.html %}
